- Update some config

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,9 +1,19 @@
 <?xml version="1.0"?>
 <phpunit
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.2/phpunit.xsd"
+        xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.4/phpunit.xsd"
         backupGlobals="true"
         colors="true"
+        displayDetailsOnTestsThatTriggerErrors="true"
+        displayDetailsOnTestsThatTriggerWarnings="true"
+        displayDetailsOnTestsThatTriggerNotices="true"
+        displayDetailsOnTestsThatTriggerDeprecations="true"
+        displayDetailsOnSkippedTests="true"
+        displayDetailsOnIncompleteTests="true"
+        failOnEmptyTestSuite="true"
+        failOnIncomplete="true"
+        failOnRisky="true"
+        failOnWarning="true"
         processIsolation="false"
         stopOnError="false"
         stopOnFailure="false"
@@ -13,10 +23,12 @@
         timeoutForSmallTests="1"
         timeoutForMediumTests="10"
         timeoutForLargeTests="60"
-        cacheDirectory=".phpunit.cache"
+        cacheDirectory="./build/.phpunit.cache"
         backupStaticProperties="false"
-        requireCoverageMetadata="false"
->
+        requireCoverageMetadata="false">
+  <php>
+    <ini name="error_reporting" value="E_ALL"/>
+  </php>
 
   <source>
     <include>
@@ -25,8 +37,11 @@
   </source>
 
   <testsuites>
-    <testsuite name="Test suite">
-      <directory>./tests</directory>
+    <testsuite name="unit">
+      <directory>./tests/unit</directory>
+    </testsuite>
+    <testsuite name="integration">
+      <directory>./tests/integration</directory>
     </testsuite>
   </testsuites>
 
