--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -1,3 +1,7 @@
+includes:
+  - ./vendor/phpstan/phpstan-phpunit/extension.neon
+  - ./vendor/phpstan/phpstan-phpunit/rules.neon
+
 parameters:
   phpVersion: 80200 # PHP 8.2 - Current minimal version supported
   level: max
@@ -7,3 +11,5 @@ parameters:
 
   bootstrapFiles:
     - ./vendor/autoload.php
+
+  ignoreErrors: []
