--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,11 @@ jobs:
         with:
           fetch-depth: 0 # To avoid "Shallow clone detected" error in SonarCloud report
 
+      - name: Setup PHP (8.2)
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.2'
+
       - name: Validate composer.json and composer.lock
         run: composer validate
 
