--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,9 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        php-versions: [ '8.2', '8.3' ]
 
     steps:
       - uses: actions/checkout@v3
@@ -19,7 +22,7 @@ jobs:
       - name: Setup PHP (8.2)
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.2'
+          php-version: ${{ matrix.php-versions }}
 
       - name: Validate composer.json and composer.lock
         run: composer validate
