- Improve github ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,25 +19,34 @@ jobs:
         with:
           fetch-depth: 0 # To avoid "Shallow clone detected" error in SonarCloud report
 
+      #~ PHP Setup
       - name: Setup PHP (8.2)
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-versions }}
 
-      - name: Validate composer.json and composer.lock
-        run: composer validate
-
-      - name: Cache Composer dependencies
+      #~ Composer Cache
+      - name: Get Composer Cache Directory
         id: composer-cache
-        uses: actions/cache@v3
+        run: |
+          echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
+
+      - uses: actions/cache@v3
         with:
-          path: /tmp/composer-cache
+          path: ${{ steps.composer-cache.outputs.dir }}
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-composer-
+
+      #~ Composer install
+      - name: Validate composer.json
+        run: composer validate
 
       - name: Install dependencies
         if: steps.composer-cache.outputs.cache-hit != 'true'
         run: make install
 
+      #~ CI part
       - name: Check Code Style
         run: make phpcs
 
@@ -58,6 +67,7 @@ jobs:
       - name: PHP Static Analyze
         run: make analyze
 
+#      #~ SonarCloud report
 #      - name: SonarCloud Scan
 #        uses: SonarSource/sonarcloud-github-action@v1.7
 #        env:
